[gd_scene load_steps=22 format=3 uid="uid://dy41m6luqu26u"]

[ext_resource type="Script" uid="uid://cf2t71xhxpkad" path="res://scripts/game.gd" id="1_i6g32"]
[ext_resource type="FontFile" uid="uid://bxcm7p0r1l0ke" path="res://CustomResource/m3x6.ttf" id="2_1l0tm"]
[ext_resource type="PackedScene" uid="uid://y8buv1lbsbcc" path="res://Card/CardUI/CardUI.tscn" id="3_v158k"]
[ext_resource type="Script" uid="uid://d2tqcjeasi5im" path="res://scripts/deckicon.gd" id="4_h4fw4"]
[ext_resource type="Texture2D" uid="uid://b81e3aiq8tlxa" path="res://Assets/cardframe/CommonCard.png" id="5_ldgsr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fc0e3"]
bg_color = Color(0.15677086, 0.288888, 0.2165545, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2o6t"]
bg_color = Color(0.08831715, 0.17964822, 0.1286872, 1)

[sub_resource type="Theme" id="Theme_7jktm"]
default_font = ExtResource("2_1l0tm")

[sub_resource type="Theme" id="Theme_ryrav"]
default_font = ExtResource("2_1l0tm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ryrav"]
bg_color = Color(0.3970674, 0.6690378, 0.5164851, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6g32"]
bg_color = Color(0.21929252, 0.30836454, 0.34550986, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l0tm"]
bg_color = Color(0.10566319, 0.15843368, 0.17908302, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s43p6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5v8q7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gf3dx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34y5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r57pj"]

[sub_resource type="Theme" id="Theme_v158k"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_s43p6")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_5v8q7")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_gf3dx")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_34y5v")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_r57pj")

[sub_resource type="Theme" id="Theme_h4fw4"]
default_font = ExtResource("2_1l0tm")

[sub_resource type="Theme" id="Theme_ldgsr"]
default_font = ExtResource("2_1l0tm")
default_font_size = 0

[sub_resource type="Theme" id="Theme_o5yvi"]
default_font = ExtResource("2_1l0tm")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6g32")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fc0e3")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -65.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_e2o6t")

[node name="GameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 7
alignment = 1

[node name="TopLayer" type="HBoxContainer" parent="GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="name" type="Label" parent="GameUI/MarginContainer/VBoxContainer/TopLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1l0tm")
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/MarginContainer/VBoxContainer/TopLayer"]
layout_mode = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="GameUI/MarginContainer/VBoxContainer/TopLayer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = SubResource("Theme_7jktm")
text = "SCORE : 1000"
horizontal_alignment = 1

[node name="BuffLabel" type="Label" parent="GameUI/MarginContainer/VBoxContainer/TopLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1l0tm")
theme_override_font_sizes/font_size = 16
text = "v: 0 m: 0
x1 x1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MidLayer" type="HBoxContainer" parent="GameUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 38

[node name="ScrollContainer" type="ScrollContainer" parent="GameUI/MarginContainer/VBoxContainer/MidLayer"]
custom_minimum_size = Vector2(100, 55)
layout_mode = 2
size_flags_horizontal = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="DescriptionLabel" type="Label" parent="GameUI/MarginContainer/VBoxContainer/MidLayer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_ryrav")
text = "heres a description blah blah blah lkajsdfjlasdjfl;asjdfl;jas lajsdfljaskldfj als;dfj l;akjalk l;aksdfj lkj l;aksdjfl; jal;sk dfjl;kja sdl;fjk al;skdfj l;aj sdfl; jasl;dfj l;as df jl;as df;asd;fjajfsdl;afj ;l asj
ajldf j;alsdfjkl;a"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SelectedSlot" type="Control" parent="GameUI/MarginContainer/VBoxContainer/MidLayer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardUI" parent="GameUI/MarginContainer/VBoxContainer/MidLayer/SelectedSlot" instance=ExtResource("3_v158k")]
layout_mode = 0

[node name="BottomLayer" type="HBoxContainer" parent="GameUI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="Hand" type="HBoxContainer" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(216, 55)
layout_mode = 2

[node name="CardUI" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="CardUI2" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="CardUI3" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="CardUI5" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="CardUI6" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="CardUI4" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Hand" instance=ExtResource("3_v158k")]
layout_mode = 2

[node name="Deck" type="Control" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer"]
custom_minimum_size = Vector2(40, 55)
layout_mode = 2
size_flags_horizontal = 10
script = ExtResource("4_h4fw4")

[node name="TextureRect" type="TextureRect" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Deck"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ldgsr")

[node name="CardsLeftLabel" type="Label" parent="GameUI/MarginContainer/VBoxContainer/BottomLayer/Deck"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1l0tm")
theme_override_font_sizes/font_size = 48
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectIcons" type="GridContainer" parent="GameUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 214.0
offset_top = 6.0
offset_right = 382.33337
offset_bottom = 185.99998
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 8
columns = 8

[node name="Panel" type="Panel" parent="GameUI"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 100)
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 119.0
offset_bottom = 108.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ryrav")

[node name="ScrollContainer" type="ScrollContainer" parent="GameUI/Panel"]
custom_minimum_size = Vector2(100, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -43.5
offset_right = 51.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Tooltip_label" type="Label" parent="GameUI/Panel/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 90)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_1l0tm")
autowrap_mode = 1

[node name="DeckInfo" type="Control" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="Control" parent="DeckInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DeckInfo/BackgroundColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i6g32")

[node name="Panel2" type="Panel" parent="DeckInfo/BackgroundColor"]
custom_minimum_size = Vector2(50, 180)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.897
anchor_right = 0.897
offset_left = -37.04001
offset_right = 33.32666
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1l0tm")

[node name="HBoxContainer" type="HBoxContainer" parent="DeckInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DeckInfo/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme = SubResource("Theme_v158k")
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="DeckInfo/HBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="GridContainerDeckInfo" type="GridContainer" parent="DeckInfo/HBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 180)
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5

[node name="Actions" type="VBoxContainer" parent="DeckInfo/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectedSlotName" type="Label" parent="DeckInfo/HBoxContainer/Actions"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_h4fw4")
text = "Deck Info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedSlotDeckInfo" type="Control" parent="DeckInfo/HBoxContainer/Actions"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 55)
layout_mode = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="DeckInfo/HBoxContainer/Actions"]
custom_minimum_size = Vector2(50, 71)
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="DescriptionDeckInfo" type="Label" parent="DeckInfo/HBoxContainer/Actions/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_ldgsr")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DeckInfo/HBoxContainer/Actions"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="DiscardDeckSize" type="Label" parent="DeckInfo/HBoxContainer/Actions/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_1l0tm")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="DeckInfo/HBoxContainer/Actions/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.95
theme = SubResource("Theme_o5yvi")
text = "Exit"

[connection signal="pressed" from="DeckInfo/HBoxContainer/Actions/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
